feat: Implement employee and student CRUD operations with REST API.