@@ -11,17 +11,17 @@ import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.List;
+import java.util.Collections;
 import java.util.Optional;
 
+import static org.hamcrest.Matchers.hasSize;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.doNothing;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(EmployeeController.class)
-public class EmployeeControllerTest {
+class EmployeeControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
@@ -36,79 +36,117 @@ public class EmployeeControllerTest {
 
     @BeforeEach
     void setUp() {
-        employee = new Employee("1", "John Doe", "IT");
+        employee = new Employee();
+        employee.setId("1");
+        employee.setName("John Doe");
+        employee.setDesignation("Software Engineer");
+        employee.setEmail("john.doe@example.com");
+        employee.setContactNumber("123-456-7890");
     }
 
     @Test
     void createEmployee_ValidInput_ReturnsCreated() throws Exception {
         when(employeeService.createEmployee(any(Employee.class))).thenReturn(employee);
 
-        mockMvc.perform(post("/employees")
+        mockMvc.perform(post("/api/employees")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(employee)))
                 .andExpect(status().isCreated())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.id").value("1"))
-                .andExpect(jsonPath("$.name").value("John Doe"))
-                .andExpect(jsonPath("$.department").value("IT"));
+                .andExpect(jsonPath("$.name").value("John Doe"));
+
+        verify(employeeService, times(1)).createEmployee(any(Employee.class));
     }
 
     @Test
     void getEmployeeById_ExistingId_ReturnsOk() throws Exception {
         when(employeeService.getEmployeeById("1")).thenReturn(Optional.of(employee));
 
-        mockMvc.perform(get("/employees/1")
-                        .contentType(MediaType.APPLICATION_JSON))
+        mockMvc.perform(get("/api/employees/1"))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.id").value("1"))
-                .andExpect(jsonPath("$.name").value("John Doe"))
-                .andExpect(jsonPath("$.department").value("IT"));
+                .andExpect(jsonPath("$.name").value("John Doe"));
+
+        verify(employeeService, times(1)).getEmployeeById("1");
     }
 
     @Test
-    void getEmployeeById_NonExistingId_ReturnsOkWithEmptyOptional() throws Exception {
+    void getEmployeeById_NonExistingId_ReturnsNotFound() throws Exception {
         when(employeeService.getEmployeeById("2")).thenReturn(Optional.empty());
 
-        mockMvc.perform(get("/employees/2")
-                        .contentType(MediaType.APPLICATION_JSON))
-                .andExpect(status().isOk());
+        mockMvc.perform(get("/api/employees/2"))
+                .andExpect(status().isNotFound());
+
+        verify(employeeService, times(1)).getEmployeeById("2");
     }
 
     @Test
-    void getAllEmployees_ReturnsOk() throws Exception {
-        when(employeeService.getAllEmployees()).thenReturn(List.of(employee));
+    void getAllEmployees_EmployeesExist_ReturnsOk() throws Exception {
+        when(employeeService.getAllEmployees()).thenReturn(Collections.singletonList(employee));
 
-        mockMvc.perform(get("/employees")
-                        .contentType(MediaType.APPLICATION_JSON))
+        mockMvc.perform(get("/api/employees"))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
+                .andExpect(jsonPath("$", hasSize(1)))
                 .andExpect(jsonPath("$[0].id").value("1"))
-                .andExpect(jsonPath("$[0].name").value("John Doe"))
-                .andExpect(jsonPath("$[0].department").value("IT"));
+                .andExpect(jsonPath("$[0].name").value("John Doe"));
+
+        verify(employeeService, times(1)).getAllEmployees();
     }
 
     @Test
-    void updateEmployee_ExistingId_ReturnsOk() throws Exception {
+    void updateEmployee_ExistingIdAndValidInput_ReturnsOk() throws Exception {
+        when(employeeService.getEmployeeById("1")).thenReturn(Optional.of(employee));
         when(employeeService.updateEmployee("1", employee)).thenReturn(employee);
 
-        mockMvc.perform(put("/employees/1")
+        mockMvc.perform(put("/api/employees/1")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(employee)))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.id").value("1"))
-                .andExpect(jsonPath("$.name").value("John Doe"))
-                .andExpect(jsonPath("$.department").value("IT"));
+                .andExpect(jsonPath("$.name").value("John Doe"));
+
+        verify(employeeService, times(1)).getEmployeeById("1");
+        verify(employeeService, times(1)).updateEmployee("1", employee);
+    }
+
+    @Test
+    void updateEmployee_NonExistingId_ReturnsNotFound() throws Exception {
+        when(employeeService.getEmployeeById("2")).thenReturn(Optional.empty());
+
+        mockMvc.perform(put("/api/employees/2")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(employee)))
+                .andExpect(status().isNotFound());
+
+        verify(employeeService, times(1)).getEmployeeById("2");
+        verify(employeeService, never()).updateEmployee(anyString(), any(Employee.class));
     }
 
     @Test
     void deleteEmployee_ExistingId_ReturnsNoContent() throws Exception {
+        when(employeeService.getEmployeeById("1")).thenReturn(Optional.of(employee));
         doNothing().when(employeeService).deleteEmployee("1");
 
-        mockMvc.perform(delete("/employees/1")
-                        .contentType(MediaType.APPLICATION_JSON))
+        mockMvc.perform(delete("/api/employees/1"))
                 .andExpect(status().isNoContent());
+
+        verify(employeeService, times(1)).getEmployeeById("1");
+        verify(employeeService, times(1)).deleteEmployee("1");
+    }
+
+    @Test
+    void deleteEmployee_NonExistingId_ReturnsNotFound() throws Exception {
+        when(employeeService.getEmployeeById("2")).thenReturn(Optional.empty());
+
+        mockMvc.perform(delete("/api/employees/2"))
+                .andExpect(status().isNotFound());
+
+        verify(employeeService, times(1)).getEmployeeById("2");
+        verify(employeeService, never()).deleteEmployee(anyString());
     }
 }
 ```
